2010-01-27  Diego Gonzalez  <diego.gonzalez@openbossa.org>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] DRT Provide worker thread ability to track counters
        https://bugs.webkit.org/show_bug.cgi?id=34221

        Implement workerThreadCount() in LayoutTestController of Qt DRT

        Tests:
        fast/workers/dedicated-worker-lifecycle.html
        fast/workers/shared-worker-frame-lifecycle.html
        fast/workers/shared-worker-lifecycle.html
        fast/workers/worker-lifecycle.html

        * Api/qwebpage.cpp:
        (qt_drt_workerThreadCount):

2010-01-27  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Laszlo Gombos.

        [Qt] Update the .def files with exported symbols

        * symbian/eabi/QtWebKitu.def: Add two mangled missing new symbols for arm eabi.

2010-01-27  Kent Hansen  <kent.hansen@nokia.com>

        Reviewed by Simon Hausmann.

        [Qt] Meta-methods can't be introspected using ES5 API
        https://bugs.webkit.org/show_bug.cgi?id=34087

        Test that Object.getOwnPropertyDescriptor and
        Object.getOwnPropertyNames work with meta-methods.

        * tests/qwebframe/tst_qwebframe.cpp:

2010-01-26  Simon Hausmann  <simon.hausmann@nokia.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] Show comboboxes on Maemo 5
        https://bugs.webkit.org/show_bug.cgi?id=34088

        Don't try to show the combobox by simulating a mouse event from QCursor::pos() to
        get the combobox position right. The position on Maemo 5 is independent from the mouse
        and there's no QCursor::pos().

        * WebCoreSupport/QtFallbackWebPopup.cpp:
        (WebCore::QtFallbackWebPopup::show):

2010-01-26  Jedrzej Nowacki  <jedrzej.nowacki@nokia.com>

        Reviewed by Simon Hausmann.

        First steps of the QtScript API.
        
        Two new classes were created; QScriptEngine and QScriptValue.